# CodeSpark

./: .replit  README.md  ai_service.py  app.py  models.py  openai_service.py  pyproject.toml  replit.md  routes.py  test_upload.py
instance/: codeanalyzer.db
static/css/: styles.css
static/js/: app.js
templates/: 404.html  500.html  analysis.html  base.html  dashboard.html  index.html  providers.html  settings.html  upload.html
